crates/oxc_css_parser/tests/error/scss/value/interpolation/empty.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ empty.scss:1:9
  │
1 │ $foo: #{};
  │         ^


